New strings for Firefox

--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Vis ikke denne besked når pop op-vinduer bliver
 popupWarningDontShowFromLocationbar=Vis ikke infobjælke når pop op-vinduer bliver blokeret
 popupShowPopupPrefix=Vis '%S'
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=%S blokerer indhold på denne side.
+badContentBlocked.notblocked.message=%S blokerer ikke indhold på denne side.
+
 # missing plugin installer
 installPlugin.message = Vil du installere det plugin, der er påkrævet for at vise medieindholdet på denne side?
 installPlugin.button.label=Installer %S
@@ -510,13 +515,32 @@ getUserMedia.shareMicrophone.message = Vil du dele din mikrofon med %S?
 getUserMedia.shareScreen.message = Vil du dele din skærm med %S?
 getUserMedia.shareCameraAndMicrophone.message = Vil du dele dit kamera og din mikrofon med %S?
 getUserMedia.shareScreenAndMicrophone.message = Vil du dele din skærm og mikrofon med %S?
-getUserMedia.noWindowOrScreen.label = Ingen skærm eller vindue
+getUserMedia.selectWindow.label=Vindue til deling:
+getUserMedia.selectWindow.accesskey=V
+getUserMedia.selectScreen.label=Skærm til deling:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Program til deling:
+getUserMedia.selectApplication.accesskey=P
 getUserMedia.noVideo.label = Ingen video
+getUserMedia.noApplication.label = Intet program
+getUserMedia.noScreen.label = Ingen skærm
+getUserMedia.noWindow.label = Intet vindue
 getUserMedia.noAudio.label = Ingen lyd
 getUserMedia.shareEntireScreen.label = Hele skærmen
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 vindue);#1 (#2 vinduer)
+# LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = Del den valgte enhed;Del valgte enheder
 getUserMedia.shareSelectedDevices.accesskey = e
 getUserMedia.shareScreen.label = Del skærm
+getUserMedia.shareApplication.label = Del valgte program
 getUserMedia.shareWindow.label = Del valgte vindue
 getUserMedia.shareSelectedItems.label = Del valgte elementer
 getUserMedia.always.label = Del altid
@@ -528,6 +552,7 @@ getUserMedia.never.accesskey = l
 getUserMedia.sharingCamera.message2 = Du deler i øjeblikket dit kamera med denne side.
 getUserMedia.sharingMicrophone.message2 = Du deler i øjeblikket din mikrofon med denne side.
 getUserMedia.sharingCameraAndMicrophone.message2 = Du deler i øjeblikket dit kamera og din mikrofon med denne side.
+getUserMedia.sharingApplication.message = Du deler i øjeblikket et program med denne side.
 getUserMedia.sharingScreen.message = Du deler i øjeblikket din skærm med denne side.
 getUserMedia.sharingWindow.message = Du deler i øjeblikket et vindue med denne side.
 getUserMedia.continueSharing.label = Fortsæt med at dele
@@ -535,7 +560,8 @@ getUserMedia.continueSharing.accesskey = F
 getUserMedia.stopSharing.label = Stop med at dele
 getUserMedia.stopSharing.accesskey = S
 
-
+getUserMedia.sharingMenu.label = Faneblade der dele enheder
+getUserMedia.sharingMenu.accesskey = n
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
 #                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
@@ -549,14 +575,14 @@ getUserMedia.stopSharing.accesskey = S
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamera)
 getUserMedia.sharingMenuMicrophone = %S (mikrofon)
-
+getUserMedia.sharingMenuApplication = %S (program)
 getUserMedia.sharingMenuScreen = %S (skærm)
 getUserMedia.sharingMenuWindow = %S (vindue)
 getUserMedia.sharingMenuCameraMicrophone = %S (kamera og mikrofon)
-
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon og program)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon og skærm)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon og vindue)
-
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon og program)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon og skærm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon og vindue)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
