--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Ocultar esta notificação quando bloquear janel
 popupWarningDontShowFromLocationbar=Não exibir a barra de notificação ao bloquear popups
 popupShowPopupPrefix=Abrir “%S”
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=O %S está bloqueando conteúdo nesta página.
+badContentBlocked.notblocked.message=O %S não está bloqueando nenhum conteúdo nesta página.
+
 # missing plugin installer
 installPlugin.message = Deseja instalar o plugin necessário para exibir mídia desta página?
 installPlugin.button.label=Instalar %S
@@ -444,6 +449,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Deseja instalar o “%1$S” deste site (“%2$S”)?
 webapps.install.success = Aplicativo instalado
 webapps.install.inprogress = Instalação em andamento
+webapps.uninstall = Desinstalar
+webapps.uninstall.accesskey = D
+webapps.doNotUninstall = Não desinstalar
+webapps.doNotUninstall.accesskey = N
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Deseja desinstalar “%S”?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=O %S está em tela inteira.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Deseja compartilhar seu microfone com %S?
 getUserMedia.shareScreen.message = Deseja compartilhar sua tela com %S?
 getUserMedia.shareCameraAndMicrophone.message = Deseja compartilhar sua câmera e seu microfone com %S?
 getUserMedia.shareScreenAndMicrophone.message = Deseja compartilhar seu microfone e sua tela com %S?
+getUserMedia.selectWindow.label=Janela a compartilhar:
+getUserMedia.selectWindow.accesskey=J
+getUserMedia.selectScreen.label=Tela a compartilhar:
+getUserMedia.selectScreen.accesskey=T
+getUserMedia.selectApplication.label=Aplicativo a compartilhar:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Sem vídeo
-getUserMedia.noWindowOrScreen.label = Sem janela ou tela
+getUserMedia.noApplication.label = Nenhum aplicativo
+getUserMedia.noScreen.label = Nenhuma tela
+getUserMedia.noWindow.label = Nenhuma janela
 getUserMedia.noAudio.label = Sem áudio
 getUserMedia.shareEntireScreen.label = Tela inteira
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 janela);#1 (#2 janelas)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Tela inteira
 getUserMedia.shareSelectedDevices.label = Compartilhar dispositivo selecionado;Compartilhar dispositivos selecionados
 getUserMedia.shareSelectedDevices.accesskey = o
 getUserMedia.shareScreen.label = Compartilhar tela
+getUserMedia.shareApplication.label = Compartilhar aplicativo selecionado
 getUserMedia.shareWindow.label = Compartilhar janela selecionada
 getUserMedia.shareSelectedItems.label = Compartilhar itens selecionados
 getUserMedia.always.label = Sempre compartilhar
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Você está compartilhando sua câmera com esta página.
 getUserMedia.sharingMicrophone.message2 = Você está compartilhando seu microfone com esta página.
 getUserMedia.sharingCameraAndMicrophone.message2 = Você está compartilhando sua câmera e seu microfone com esta página.
+getUserMedia.sharingApplication.message = Você está compartilhando um aplicativo com esta página.
 getUserMedia.sharingScreen.message = Você está compartilhando sua tela com esta página.
 getUserMedia.sharingWindow.message = Você está compartilhando uma janela com esta página.
 getUserMedia.continueSharing.label = Continuar compartilhando
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Parar de compartilhar
 getUserMedia.stopSharing.accesskey = P
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = O %S bloqueou conteúdo que não era seguro.
-mixedContentBlocked.keepBlockingButton.label = Continuar bloqueando
-mixedContentBlocked.keepBlockingButton.accesskey = C
-mixedContentBlocked.unblock.label = Desativar proteção nesta página
-mixedContentBlocked.unblock.accesskey = D
+getUserMedia.sharingMenu.label = Abas compartilhando dispositivos
+getUserMedia.sharingMenu.accesskey = A
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (câmera)
+getUserMedia.sharingMenuMicrophone = %S (microfone)
+getUserMedia.sharingMenuApplication = %S (aplicativo)
+getUserMedia.sharingMenuScreen = %S (tela)
+getUserMedia.sharingMenuWindow = %S (janela)
+getUserMedia.sharingMenuCameraMicrophone = %S (câmera e microfone)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (câmera, microfone e aplicativo)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (câmera, microfone e tela)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (câmera, microfone e janela)
+getUserMedia.sharingMenuMicrophoneApplication = %S (microfone e aplicativo)
+getUserMedia.sharingMenuMicrophoneScreen = %S (microfone e tela)
+getUserMedia.sharingMenuMicrophoneWindow = %S (microfone e janela)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Origem desconhecida
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = O %S aparenta iniciar… muito… lentamente.
