--- a/pt-BR/browser/chrome/browser/newTab.properties
+++ b/pt-BR/browser/chrome/browser/newTab.properties
@@ -5,6 +5,26 @@
 newtab.pin=Fixar site nesta posição
 newtab.unpin=Desafixar site
 newtab.block=Excluir site
-newtab.show=Exibir página de nova aba
-newtab.hide=Ocultar página de nova aba
-newtab.sponsored=Exibir informações sobre blocos patrocinados
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=PATROCINADO
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Este bloco está sendo exibido a você em nome de um parceiro da Mozilla. Você pode excluí-lo a qualquer momento clicando no botão %1$S. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Um parceiro da Mozilla aprimorou visualmente este bloco, substituindo a captura da tela. Você pode desativar os blocos avançados clicando no botão %1$S para suas preferências. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Quando você abre uma aba, você vê blocos de sites que você visita com frequência junto com blocos que achamos que podem interessar a você. Alguns destes blocos podem ser patrocinados por parceiros da Mozilla. Sempre indicamos quais blocos são patrocinados. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Para fornecer este serviço, a Mozilla coleta e usa certas informações analíticas relacionadas ao uso dos blocos de acordo com nosso %1$S.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Você pode desativar os blocos clicando no botão %1$S para suas preferências.
+newtab.learn.link=Saiba mais…
+newtab.privacy.link=aviso de privacidade
