--- a/pt-BR/browser/chrome/browser/preferences/preferences.properties
+++ b/pt-BR/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Estes cookies estão armazenados no seu computador:
 cookiesFiltered=Estes cookies satisfazem a sua pesquisa:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Excluir dados offline de site
 offlineAppRemovePrompt=Após excluir estes dados, o %S não estará mais disponível para uso offline. Deseja excluir este site offline?
 offlineAppRemoveConfirm=Excluir dados offline
