--- a/pt-BR/browser/chrome/browser/shellservice.properties
+++ b/pt-BR/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=&Opções do %S
 safeModeLabel=&Modo de segurança do %S
-setDefaultBrowserTitle=Navegador padrão
-setDefaultBrowserMessage=O %S não é o seu navegador padrão. Deseja defini-lo como padrão?
-setDefaultBrowserDontAsk=Sempre verificar ao iniciar o %S
-alreadyDefaultBrowser=O %S já está definido como o navegador padrão.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Consiga o máximo do %S definindo-o como seu navegador padrão
+setDefaultBrowserConfirm.label     = Definir o %S como meu navegador padrão
+setDefaultBrowserConfirm.accesskey = D
+setDefaultBrowserOptions.label     = Opções
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Agora não
+setDefaultBrowserNotNow.accesskey  = A
+setDefaultBrowserNever.label       = Não perguntar de novo
+setDefaultBrowserNever.accesskey   = N
+
+
 desktopBackgroundLeafNameWin=Papel de parede.bmp
 DesktopBackgroundDownloading=Salvando imagem…
 DesktopBackgroundSet=Definir papel de parede
