--- a/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,9 @@ quit-button.tooltiptext.linux2 = Sair do %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Sair do %1$S (%2$S)
+
+panic-button.label = Esquecer
+panic-button.tooltiptext = Esquecer uma parte de seus dados pessoais
+
+loop-call-button.label = Convidar para conversar
+loop-call-button.tooltiptext = Convidar alguém para conversar
