--- a/pt-BR/browser/chrome/browser/webrtcIndicator.properties
+++ b/pt-BR/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Indicador de compartilhamento
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Sua câmera e seu microfone estão sendo compartilhados. Clique para controlar o compartilhamento.
 webrtcIndicator.sharingCamera.tooltip              = Sua câmera está sendo compartilhada. Clique para controlar o compartilhamento.
 webrtcIndicator.sharingMicrophone.tooltip          = Seu microfone está sendo compartilhado. Clique para controlar o compartilhamento.
+webrtcIndicator.sharingApplication.tooltip = Um aplicativo está sendo compartilhado. Clique para controlar o compartilhamento.
 webrtcIndicator.sharingScreen.tooltip = Sua tela está sendo compartilhada. Clique para controlar o compartilhamento.
 webrtcIndicator.sharingWindow.tooltip = Uma janela está sendo compartilhada. Clique para controlar o compartilhamento.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Uma janela está sendo compartilhada. Cl
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Compartilhando câmera com “%S”
 webrtcIndicator.sharingMicrophoneWith.menuitem = Compartilhando microfone com “%S”
+webrtcIndicator.sharingApplicationWith.menuitem = Compartilhando um aplicativo com “%S”
 webrtcIndicator.sharingScreenWith.menuitem = Compartilhando tela com “%S”
 webrtcIndicator.sharingWindowWith.menuitem = Compartilhando uma janela com “%S”
 webrtcIndicator.controlSharing.menuitem = Controle de compartilhamento
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Compartilhando câmera com #1 aba;Compartilhando câmera com #1 abas
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Compartilhando microfone com #1 aba;Compartilhando microfone com #1 abas
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Compartilhando um aplicativo com #1 aba;Compartilhando aplicativos com #1 abas
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Compartilhando tela com #1 aba;Compartilhando tela com #1 abas
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Compartilhando uma janela com #1 aba;Compartilhando janelas com #1 abas
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
