--- a/pt-BR/toolkit/chrome/global/aboutSupport.properties
+++ b/pt-BR/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Parâmetros ClearType não encontrados
 adapterDescription = Descrição do adaptador
 adapterVendorID = ID do fornecedor
 adapterDeviceID = ID do dispositivo
+adapterSubsysID = Subsys ID
 adapterDrivers = Drivers do adaptador
 adapterRAM = RAM do adaptador
 driverVersion = Versão do driver
@@ -71,6 +72,7 @@ driverDate = Data do driver
 adapterDescription2 = Descrição do adaptador (GPU #2)
 adapterVendorID2 = ID do fornecedor (GPU #2)
 adapterDeviceID2 = ID do dispositivo (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Drivers do adaptador (GPU #2)
 adapterRAM2 = RAM do adaptador (GPU #2)
 driverVersion2 = Versão do driver (GPU #2)
