Bug 1046941 - Disable downloads and extension installs in guest mode. r=margaret

--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -19,6 +19,9 @@ alertDownloadsToast=Downloaden gestart…
 alertDownloadsPause=Pauzeren
 alertDownloadsResume=Hervatten
 alertDownloadsCancel=Annuleren
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=In gastsessies is downloaden uitgeschakeld
 
 alertFullScreenToast=Druk op TERUG om de volledigschermmodus te verlaten
 
