--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -345,3 +345,9 @@ browser.menu.context.mailto = E-mail
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Feed kiezen
 feedHandler.subscribeWith=Abonneren met
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S wordt niet meer ondersteund. Gebruik in plaats daarvan %S
