--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -119,6 +119,35 @@ contacts.ask=%S toegang tot uw contacten toestaan?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Niet meer vragen voor deze website
 
+# Device Storage API
+deviceStorageMusic.allow=Toestaan
+deviceStorageMusic.dontAllow=Niet toestaan
+deviceStorageMusic.ask=%S toegang tot uw muziek toestaan?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Niet meer vragen voor deze website
+
+deviceStoragePictures.allow=Toestaan
+deviceStoragePictures.dontAllow=Niet toestaan
+deviceStoragePictures.ask=%S toegang tot uw afbeeldingen toestaan?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Niet meer vragen voor deze website
+
+deviceStorageSdcard.allow=Toestaan
+deviceStorageSdcard.dontAllow=Niet toestaan
+deviceStorageSdcard.ask=%S toegang tot uw externe opslag toestaan?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Niet meer vragen voor deze website
+
+deviceStorageVideos.allow=Toestaan
+deviceStorageVideos.dontAllow=Niet toestaan
+deviceStorageVideos.ask=%S toegang tot uw video's toestaan?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Niet meer vragen voor deze website
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
