bug 1037015 - support tab casting to chromecast r=mfinkle

--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -208,6 +208,8 @@ selectionHelper.textCopied=Tekst gekopieerd naar klembord
 
 # Casting
 casting.prompt=Casten naar apparaat
+casting.mirrorTab=Tabblad spiegelen
+casting.mirrorTabStop=Spiegelen stoppen
 
 # Context menu
 contextmenu.openInNewTab=Koppeling openen in nieuw tabblad
