Bug 714070 - Tapping on the 'Installation completed' toaster notification should open up the Add-ons manager. r=wesj

--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Installeren
 
 # Alerts
 alertAddonsDownloading=Add-on downloaden
-alertAddonsInstalledNoRestart=Installatie voltooid
 alertAddonsFail=Installatie mislukt
+alertAddonsInstalledNoRestart.message=Installatie voltooid
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ADD-ONS
 
 alertDownloadsStart2=Downloaden starten
 alertDownloadsDone2=Downloaden voltooid
