Bug 1054912 - Change 'Cast to' term to 'Send to ' in-product r=wesj a=mfinkle l10n=mfinkle

--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -211,7 +211,9 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Tekst gekopieerd naar klembord
 
 # Casting
-casting.prompt=Casten naar apparaat
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Naar apparaat verzenden
 casting.mirrorTab=Tabblad spiegelen
 casting.mirrorTabStop=Spiegelen stoppen
 
@@ -247,7 +249,9 @@ contextmenu.unmute=Dempen uitschakelen
 contextmenu.saveVideo=Video opslaan 
 contextmenu.saveAudio=Audio opslaan
 contextmenu.addToContacts=Toevoegen aan contacten
-contextmenu.castToScreen=Casten naar scherm
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Naar apparaat verzenden
 
 contextmenu.copy=Kopiëren
 contextmenu.cut=Knippen
