Bug 1046885 - Disable installing webapps in guest mode profiles. r=myk

--- a/nl/mobile/android/chrome/webapp.properties
+++ b/nl/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 update mislukt;#1 updates mislukt
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Ophalen van update voor %1$S mislukt;Ophalen van updates voor %1$S mislukt
+
+webappsDisabledInGuest=In gastsessies is installeren van apps uitgeschakeld
