Update App manager to unify with WebIDE

--- a/sl/browser/chrome/browser/devtools/app-manager.properties
+++ b/sl/browser/chrome/browser/devtools/app-manager.properties
@@ -15,7 +15,7 @@ project.installing=Nameščanje …
 project.installed=Nameščeno!
 validator.nonExistingFolder=Mapa projekta ne obstaja
 validator.expectProjectFolder=Mapa projekta je datoteka
-validator.wrongManifestFileName=Aplikacije morajo imeti v mapi projekta datoteko z manifestom, ki se mora imenovati 'manifest.webapp'
+validator.wrongManifestFileName=Zapakirane aplikacije morajo imeti v mapi projekta datoteko z manifestom, ki se mora imenovati 'manifest.webapp'
 validator.invalidManifestURL=Neveljaven URL manifesta '%S'
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
