--- a/pt-BR/security/manager/chrome/pipnss/nsserrors.properties
+++ b/pt-BR/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=A senha está travada.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Erro PKCS #11 não conhecido.
 SEC_ERROR_BAD_CRL_DP_URL=URL inválida ou não suportada no nome do ponto de distribuição da CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=O certificado foi assinado usando um algoritmo de assinatura que está desativado porque não é seguro.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=O servidor usa memorização de chaves (HPKP) mas nenhuma cadeia de certificados que poderia ser montada pode ser encontrada no conjunto de chaves memorizadas. Violações da memorização de chaves não podem ser contornadas.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=O servidor usa um certificado com uma extensão de restrições básica identificado-o como uma autoridade certificadora. Para um certificado emitido corretamente, este não deveria ser o caso.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=O servidor apresentou um certificado com um tamanho de chave que é pequeno demais para estabelecer uma conexão segura.
