--- a/pt-BR/dom/chrome/accessibility/AccessFu.properties
+++ b/pt-BR/dom/chrome/accessibility/AccessFu.properties
@@ -36,7 +36,7 @@ pushbutton     =       botão
 checkbutton    =       botão de seleção
 radiobutton    =       campo rádio
 combobox       =       caixa de combinação
-progressbar    =       barra de progresso
+progressbar    =       barra de andamento
 slider         =       controle deslizante
 spinbutton     =       botão de rotação
 diagram        =       diagrama
@@ -94,11 +94,10 @@ listEnd        =       Último item
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 item;#1 itens
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S de %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S de %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +107,14 @@ main           =       principal
 navigation     =       navegação
 search         =       pesquisa
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S com %S e %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 coluna;#1 colunas
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = com 1 coluna;com #1 colunas
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 linha;#1 linhas
+tblRowInfo = e 1 linha;e #1 linhas
 
 # table or grid cell information
 columnInfo = Coluna %S
@@ -190,18 +186,85 @@ quicknav_Table       = Tabelas
 quicknav_Checkbox    = Campos check box
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
+menubarAbbr        =       barra de menu
+scrollbarAbbr      =       barra de rolagem
+gripAbbr           =       alça
+alertAbbr          =       alerta
+menupopupAbbr      =       menu popup
+documentAbbr       =       documento
+paneAbbr           =       painel
+dialogAbbr         =       diálogo
+separatorAbbr      =       separador
+toolbarAbbr        =       barra de ferramentas
+statusbarAbbr      =       barra de status
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       cabeçalho da coluna
+rowheaderAbbr      =       cabeçalho da linha
+columnAbbr         =       coluna
+rowAbbr            =       linha
+cellAbbr           =       célula
+linkAbbr           =       lnk
+listAbbr           =       lista
+listitemAbbr       =       item de lista
+outlineAbbr        =       estrutura de tópicos
+outlineitemAbbr    =       item de estrutura de tópicos
+pagetabAbbr        =       aba
+propertypageAbbr   =       página de propriedades
+graphicAbbr        =       gráfico
+pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       botão de seleção
+radiobuttonAbbr    =       campo rádio
+comboboxAbbr       =       caixa de combinação
+progressbarAbbr    =       barra de andamento
+sliderAbbr         =       controle deslizante
+spinbuttonAbbr     =       botão de rotação
+diagramAbbr        =       diagrama
+animationAbbr      =       animação
+equationAbbr       =       equação
+buttonmenuAbbr     =       botão menu
+whitespaceAbbr     =       espaço em branco
+pagetablistAbbr    =       lista de abas
+canvasAbbr         =       tela
+checkmenuitemAbbr  =       item marcado de menu
+labelAbbr          =       rótulo
+passwordtextAbbr   =       textosenha
+radiomenuitemAbbr  =       item rádio de menu
+textcontainerAbbr  =       espaço para texto
+togglebuttonAbbr   =       botão inverter
+treetableAbbr      =       tree table
+headerAbbr         =       cabeçalho
+footerAbbr         =       rodapé
+paragraphAbbr      =       parágrafo
+entryAbbr          =       entrada
+captionAbbr        =       subtítulo
+headingAbbr        =       título
+sectionAbbr        =       seção
+formAbbr           =       formulário
+comboboxlistAbbr   =       lista de caixa de combinação
+comboboxoptionAbbr =       opção de caixa de combinação
+imagemapAbbr       =       mapaimg
+listboxoptionAbbr  =       opção
+listboxAbbr        =       caixa de listagem
+flatequationAbbr   =       flat equation
+gridcellAbbr       =       célula do grid
+noteAbbr           =       anotação
+figureAbbr         =       fig
+definitionlistAbbr =       lista de definições
+termAbbr           =       termo
+definitionAbbr     =       definição
+textareaAbbr       =       areatexto
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
-cellInfoAbbr = c%Sr%S
+tblRowInfoAbbr = #1l;#1l
+cellInfoAbbr = c%Sl%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
