--- a/pt-BR/dom/chrome/security/csp.properties
+++ b/pt-BR/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Bloqueada uma tentativa de executar JavaScript de uma 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Interpretando %1$S como um nome de servidor, não uma palavra-chave. Se sua intenção era usá-la como palavra-chave, use '%2$S' (entre aspas simples).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Directiva não suportada “%1$S”. Diretiva e valores serão ignorados.
 
 # CSP Errors:
 policyURINotAlone = a diretiva policy-uri somente pode declarada sozinha
