--- a/pt-BR/mobile/android/chrome/browser.properties
+++ b/pt-BR/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Instalar
 
 # Alerts
 alertAddonsDownloading=Recebendo o complemento
-alertAddonsInstalledNoRestart=Instalação concluída
 alertAddonsFail=Falha na instalação
+alertAddonsInstalledNoRestart.message=Instalação concluída
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=COMPLEMENTOS
 
 alertDownloadsStart2=Iniciando o download
 alertDownloadsDone2=Download concluído
@@ -19,6 +23,9 @@ alertDownloadsToast=Download iniciado…
 alertDownloadsPause=Pausa
 alertDownloadsResume=Continuar
 alertDownloadsCancel=Cancelar
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Downloads são desativados em sessões de convidado
 
 alertFullScreenToast=Tecle BACK para sair da tela inteira
 
@@ -116,6 +123,35 @@ contacts.ask=Permitir que %S tenha acesso aos seus contatos?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Não perguntar de novo para este site
 
+# Device Storage API
+deviceStorageMusic.allow=Permitir
+deviceStorageMusic.dontAllow=Não permitir
+deviceStorageMusic.ask=Permitir que %S accesse suas músicas?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Não perguntar de novo para este site
+
+deviceStoragePictures.allow=Permitir
+deviceStoragePictures.dontAllow=Não permitir
+deviceStoragePictures.ask=Permitir que %S accesse suas imagens?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Não perguntar de novo para este site
+
+deviceStorageSdcard.allow=Permitir
+deviceStorageSdcard.dontAllow=Não permitir
+deviceStorageSdcard.ask=Permitir que %S accesse seu armazenamento externo?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Não perguntar de novo para este site
+
+deviceStorageVideos.allow=Permitir
+deviceStorageVideos.dontAllow=Não permitir
+deviceStorageVideos.ask=Permitir que %S accesse seus vídeos?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Não perguntar de novo para este site
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -130,7 +166,7 @@ newtabpopup.switch=SELECIONAR
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
 # when the user closes a tab. %S is the title of the tab that was closed.
-undoCloseToast.message=Aba fechada: %S
+undoCloseToast.message=Fechada: %S
 
 # LOCALIZATION NOTE (undoCloseToast.messageDefault): This message appears in a
 # toast when the user closes a tab if there is no title to display.
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Texto copiado para área de transferência
 
 # Casting
-casting.prompt=Transmitir para dispositivo
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Enviar para dispositivo
+casting.mirrorTab=Espelhar aba
+casting.mirrorTabStop=Interromper espelhamento
 
 # Context menu
 contextmenu.openInNewTab=Abrir em nova aba
@@ -209,7 +249,9 @@ contextmenu.unmute=Ativar som
 contextmenu.saveVideo=Salvar vídeo
 contextmenu.saveAudio=Salvar áudio
 contextmenu.addToContacts=Adicionar aos contatos
-contextmenu.castToScreen=Transmitir para tela
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Enviar para dispositivo
 
 contextmenu.copy=Copiar
 contextmenu.cut=Recortar
@@ -303,7 +345,7 @@ lwthemeInstallRequest.allowButton=Permitir
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message, getUserMedia.shareCameraAndMicrophone.message, getUserMedia.sharingCamera.message, getUserMedia.sharingMicrophone.message, getUserMedia.sharingCameraAndMicrophone.message): %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.shareCamera.message = Deseja compartilhar sua câmera com %S?
 getUserMedia.shareMicrophone.message = Deseja compartilhar seu microfone com %S?
-getUserMedia.shareCameraAndMicrophone.message = Deseja compartilhar sua câmera e microfone com %S?
+getUserMedia.shareCameraAndMicrophone.message = Deseja compartilhar sua câmera e seu microfone com %S?
 getUserMedia.denyRequest.label = Não compartilhar
 getUserMedia.shareRequest.label = Compartilhar
 getUserMedia.videoSource.default = Câmera %S
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Email
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Selecione o RSS
 feedHandler.subscribeWith=Inscrever com
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S não deve mais ser usado. No lugar, use %S
