--- a/pt-BR/mobile/android/chrome/webapp.properties
+++ b/pt-BR/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=Falha em #1 atualização;Falha em #1 atualizações
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Falha no recebimento da atualização de %1$S;Falha no recebimento das atualizações de %1$S
+
+webappsDisabledInGuest=A instalação de aplicativos está desativada em sessões de convidado
