--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -6,34 +6,265 @@
 
 share_link_header_text=Compartilhe este link para convidar alguém para conversar:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Quem você está convidando?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=O convite perderá a validade em {{expiry_time}} dia;O convite perderá a validade em {{expiry_time}} dias
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=O convite perderá a validade em {{expiry_time}} hora;O convite perderá a validade em {{expiry_time}} horas
+
 # Status text
+display_name_guest=Convidado
 display_name_dnd_status=Não perturbe
 display_name_available_status=Disponível
 
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Desculpe, não foi possível carregar uma URL de chamada.
+session_expired_error_description=A sessão perdeu a validade. Todas as URLs que você criou e compartilhou anteriormente não funcionarão mais.
+could_not_authenticate=Não foi possível autenticar
+password_changed_question=Você modificou sua senha?
+try_again_later=Por favor, tente de novo mais tarde
+could_not_connect=Não foi possível conectar-se ao servidor
+check_internet_connection=Por favor, verifique sua conexão de internet
+login_expired=Seu login perdeu a validade
+service_not_available=Serviço indisponível neste momento
+problem_accessing_account=Houve um problema ao acessar sua conta
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Tentar de novo
+
+share_email_subject3=Você foi convidado para uma conversa
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Para aceitar este convite, copie ou clique neste link para iniciar sua conversa:\r\n\r\n{{callUrl}}
+share_button=Email
+copy_url_button=Copiar
+copied_url_button=Copiado!
+
+panel_footer_signin_or_signup_link=Entre ou cadastre-se
+
+settings_menu_item_account=Conta
+settings_menu_item_settings=Configurações
+settings_menu_item_signout=Sair
+settings_menu_item_signin=Entrar
+settings_menu_button_tooltip=Configurações
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Localizar…
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Novo contato
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nome
+new_contact_email_placeholder=Email
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Adicionar contato
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Por favor, forneça um endereço de email válido
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Adicionar ou importar contato
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Importar
+importing_contacts_progress_button=Importando…
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sincronizar contatos
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Desculpe, a importação de contatos falhou
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Desculpe, a importação de contatos falhou. Por favor, veja nosso {{import_failed_support_link_label}} para auxílio
+import_failed_support_link_label=site de suporte
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Excluir contato
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Tem certeza que deseja excluir este contato?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Excluir contato
+confirm_delete_contact_cancel_button=Cancelar
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Bloquear contato
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Desbloquear contato
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Editar contato…
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Editar contato
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Nome
+edit_contact_email_label=Email
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Concluir
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Conversa de áudio
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Conversa de vídeo
 
 # Conversation Window Strings
 
-incoming_call_title=Recebendo chamada…
-incoming_call=Recebendo chamada
-incoming_call_answer_button=Atender
-incoming_call_decline_button=Rejeitar
-incoming_call_ignore_button=Ignorar
+initiate_call_button_label2=Pronto para iniciar a conversa?
+incoming_call_title2=Pedido de conversa
+incoming_call_accept_button=Aceitar
+incoming_call_accept_audio_only_tooltip=Aceitar com voz
+incoming_call_cancel_button=Cancelar
+incoming_call_cancel_and_block_button=Cancelar e bloquear
 incoming_call_block_button=Bloquear
 hangup_button_title=Desligar
+hangup_button_caption2=Sair
 mute_local_audio_button_title=Ativar o mudo do seu áudio
 unmute_local_audio_button_title=Desativar o mudo do seu áudio
 mute_local_video_button_title=Ativar o mudo do seu vídeo
 unmute_local_video_button_title=Desativar o mudo do seu vídeo
 
-peer_ended_conversation=O outro lado encerrou a conversa.
-call_has_ended=Sua chamada foi encerrada.
-close_window=Fechar esta janela
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Conversa com {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Iniciar conversa?
+initiate_audio_video_call_button2=Iniciar
+initiate_audio_video_call_tooltip2=Iniciar uma conversa de vídeo
+initiate_audio_call_button2=Conversa de voz
+initiate_call_cancel_button=Cancelar
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Conectando…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Chamando…
+
+peer_ended_conversation2=A pessoa chamada encerrou a conversa.
+conversation_has_ended=Sua conversa foi encerrada.
+restart_call=Reconectar
+
+generic_failure_title=Algo deu errado.
+generic_failure_with_reason2=Você pode tentar de novo ou enviar por email um link para tentar mais tarde.
+generic_failure_no_reason2=Deseja tentar de novo?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Esta pessoa não está online
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Sua chamada não foi efetuada.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Tentar de novo
+email_link_button=Enviar link por email
+cancel_button=Cancelar
 
 cannot_start_call_session_not_ready=Não foi possível iniciar a chamada, a sessão não está pronta.
 network_disconnected=A conexão de rede foi interrompida abruptamente.
-
 connection_error_see_console_notification=Falha na chamada; veja o console para detalhes.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=Ao usar este produto você concorda com os <a target="_blank" href="{{terms_of_use_url}}">Termos de uso</a> e com o <a href="{{privacy_notice_url}}">Aviso de privacidade</a>.
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Ao usar o {{clientShortname}} você concorda com os {{terms_of_use}} e o {{privacy_notice}}.
+
+legal_text_tos = termos de uso
+legal_text_privacy = aviso de privacidade
+client_shortname_fallback=este produto
+
+feedback_call_experience_heading2=Como foi sua conversa?
+feedback_what_makes_you_sad=O que te deixa triste?
+feedback_thank_you_heading=Obrigado pela sua opinião!
+feedback_category_audio_quality=Qualidade de áudio
+feedback_category_video_quality=Qualidade de vídeo
+feedback_category_was_disconnected=Foi desconectado
+feedback_category_confusing=Embaraçoso
+feedback_category_other=Outro:
+feedback_custom_category_text_placeholder=O que deu errado?
+feedback_submit_button=Enviar
+feedback_back_button=Voltar
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Esta janela fechará em {{countdown}} segundo;Esta janela fechará em {{countdown}} segundos
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Reconectar
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Reportar usuário
