--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -78,8 +78,8 @@ blockPopups.label=Pop-ups blokkeren
 
 # XPInstall
 xpinstallPromptWarning2=%S heeft voorkomen dat deze website (%S) u vraagt programmatuur op uw apparaat te installeren.
-xpinstallPromptWarningLocal=%S heeft voorkomen dat deze add-on (%S) werd geïnstalleerd op uw apparaat.
-xpinstallPromptWarningDirect=%S heeft voorkomen dat een add-on werd geïnstalleerd op uw apparaat.
+xpinstallPromptWarningLocal=%S heeft voorkomen dat deze add-on (%S) op uw apparaat werd geïnstalleerd.
+xpinstallPromptWarningDirect=%S heeft voorkomen dat een add-on op uw apparaat werd geïnstalleerd.
 xpinstallPromptAllowButton=Toestaan
 xpinstallDisabledMessageLocked=Installatie van programmatuur is uitgeschakeld door uw systeembeheerder.
 xpinstallDisabledMessage2=Installatie van programmatuur is momenteel uitgeschakeld. Druk op Inschakelen en probeer het opnieuw.
@@ -118,7 +118,7 @@ desktopNotification.dontAskAgain=Niet meer vragen voor deze website
 # Contacts API
 contacts.allow=Toestaan
 contacts.dontAllow=Niet toestaan
-contacts.ask=%S toegang tot uw contacten toestaan?
+contacts.ask=Toegang tot uw contacten voor %S toestaan?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Niet meer vragen voor deze website
@@ -126,28 +126,28 @@ contacts.dontAskAgain=Niet meer vragen voor deze website
 # Device Storage API
 deviceStorageMusic.allow=Toestaan
 deviceStorageMusic.dontAllow=Niet toestaan
-deviceStorageMusic.ask=%S toegang tot uw muziek toestaan?
+deviceStorageMusic.ask=Toegang tot uw muziek voor %S toestaan?
 # LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageMusic.dontAskAgain=Niet meer vragen voor deze website
 
 deviceStoragePictures.allow=Toestaan
 deviceStoragePictures.dontAllow=Niet toestaan
-deviceStoragePictures.ask=%S toegang tot uw afbeeldingen toestaan?
+deviceStoragePictures.ask=Toegang tot uw afbeeldingen voor %S toestaan?
 # LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStoragePictures.dontAskAgain=Niet meer vragen voor deze website
 
 deviceStorageSdcard.allow=Toestaan
 deviceStorageSdcard.dontAllow=Niet toestaan
-deviceStorageSdcard.ask=%S toegang tot uw externe opslag toestaan?
+deviceStorageSdcard.ask=Toegang tot uw externe opslag voor %S toestaan?
 # LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageSdcard.dontAskAgain=Niet meer vragen voor deze website
 
 deviceStorageVideos.allow=Toestaan
 deviceStorageVideos.dontAllow=Niet toestaan
-deviceStorageVideos.ask=%S toegang tot uw video's toestaan?
+deviceStorageVideos.ask=Toegang tot uw video’s voor %S toestaan?
 # LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageVideos.dontAskAgain=Niet meer vragen voor deze website
@@ -161,7 +161,7 @@ newprivatetabpopup.opened=Nieuw privétabblad geopend;#1 nieuwe privétabbladen 
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
-newtabpopup.switch=WISSEL
+newtabpopup.switch=WISSELEN
 
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
@@ -170,7 +170,7 @@ undoCloseToast.message=%S gesloten
 
 # LOCALIZATION NOTE (undoCloseToast.messageDefault): This message appears in a
 # toast when the user closes a tab if there is no title to display.
-undoCloseToast.messageDefault=Gesloten tabblad
+undoCloseToast.messageDefault=Tabblad gesloten
 
 # LOCALIZATION NOTE (undoCloseToast.action2): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
@@ -213,14 +213,14 @@ selectionHelper.textCopied=Tekst gekopieerd naar klembord
 # Casting
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
-casting.sendToDevice=Naar apparaat verzenden
+casting.sendToDevice=Verzenden naar apparaat
 casting.mirrorTab=Tabblad spiegelen
 casting.mirrorTabStop=Spiegelen stoppen
 
 # Context menu
 contextmenu.openInNewTab=Koppeling openen in nieuw tabblad
 contextmenu.openInPrivateTab=Koppeling openen in privétabblad
-contextmenu.addToReadingList=Aan leeslijst toevoegen
+contextmenu.addToReadingList=Toevoegen aan leeslijst
 contextmenu.share=Delen
 contextmenu.copyLink=Koppeling kopiëren
 contextmenu.shareLink=Koppeling delen
@@ -239,7 +239,7 @@ contextmenu.shareImage=Afbeelding delen
 contextmenu.search=%S-zoeken
 contextmenu.saveImage=Afbeelding opslaan
 contextmenu.setImageAs=Afbeelding instellen als
-contextmenu.addSearchEngine2=Als zoekmachine toevoegen
+contextmenu.addSearchEngine2=Toevoegen als zoekmachine
 contextmenu.playMedia=Afspelen
 contextmenu.pauseMedia=Pauzeren
 contextmenu.shareMedia=Video delen
@@ -251,7 +251,7 @@ contextmenu.saveAudio=Audio opslaan
 contextmenu.addToContacts=Toevoegen aan contacten
 # LOCALIZATION NOTE (contextmenu.sendToDevice):
 # The label that will be used in the contextmenu and the pageaction
-contextmenu.sendToDevice=Naar apparaat verzenden
+contextmenu.sendToDevice=Verzenden naar apparaat
 
 contextmenu.copy=Kopiëren
 contextmenu.cut=Knippen
@@ -349,8 +349,8 @@ getUserMedia.shareCameraAndMicrophone.message = Wilt u uw camera en microfoon de
 getUserMedia.denyRequest.label = Niet delen
 getUserMedia.shareRequest.label = Delen
 getUserMedia.videoSource.default = Camera %S
-getUserMedia.videoSource.frontCamera = Camera aan de voorkant
-getUserMedia.videoSource.backCamera = Camera aan de achterkant
+getUserMedia.videoSource.frontCamera = Camera aan voorzijde
+getUserMedia.videoSource.backCamera = Camera aan achterzijde
 getUserMedia.videoSource.none = Geen video
 getUserMedia.videoSource.prompt = Te gebruiken camera
 getUserMedia.videoSource.tabShare = Tabblad om te streamen kiezen
