--- a/nl/mobile/android/chrome/webapp.properties
+++ b/nl/mobile/android/chrome/webapp.properties
@@ -18,7 +18,7 @@ retrieveUpdateTitle=#1 nieuwe update beschikbaar;#1 nieuwe updates beschikbaar
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to retrieve an update.
 # example: Touch to retrieve updates for Foo, Bar, Baz
-retrieveUpdateMessage=Raak om de update voor %1$S op te halen;Raak aan om de updates voor %1$S op te halen
+retrieveUpdateMessage=Raak aan om update voor %1$S op te halen;Raak aan om updates voor %1$S op te halen
 
 # LOCALIZATION NOTE (retrievingUpdateTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -42,7 +42,7 @@ installUpdateTitle=#1 update gedownload;#1 updates gedownload
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to install an update.
 # example: Touch to install updates for Foo, Bar, Baz
-installUpdateMessage2=Raak aan om de update voor %1$S te installeren;Raak aan om de updates voor %1$S te installeren
+installUpdateMessage2=Raak aan om update voor %1$S te installeren;Raak aan om updates voor %1$S te installeren
 
 # LOCALIZATION NOTE (retrievalFailedTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 update mislukt;#1 updates mislukt
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Ophalen van update voor %1$S mislukt;Ophalen van updates voor %1$S mislukt
 
-webappsDisabledInGuest=In gastsessies is installeren van apps uitgeschakeld
+webappsDisabledInGuest=In gastsessies is het installeren van apps uitgeschakeld
