--- a/nl/mobile/android/chrome/aboutHome.properties
+++ b/nl/mobile/android/chrome/aboutHome.properties
@@ -2,4 +2,4 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-banner.firstrunHomepage.text=Welkom op uw startpagina! Elke keer als u een nieuw tabblad opent komt u hier terug.
+banner.firstrunHomepage.text=Welkom op uw startpagina! Keer hier telkens wanneer u een nieuw tabblad opent terug.
