Corrections in security

--- a/da/security/manager/chrome/pippki/pippki.properties
+++ b/da/security/manager/chrome/pippki/pippki.properties
@@ -151,9 +151,9 @@ writeFileUnknownError=Ukendt fejl
 
 #Add Security Exception dialog
 addExceptionBrandedWarning2=Du er ved at tilsidesætte hvordan %S identificerer dette websted.
-addExceptionInvalidHeader=Dette website forsøger at identificere sig selv med ugyldig information.
-addExceptionDomainMismatchShort=Forkert website
-addExceptionDomainMismatchLong=Certifikatet tilhører et andet website, hvilket kan indikere identitetstyveri.
+addExceptionInvalidHeader=Dette websted forsøger at identificere sig selv med ugyldig information.
+addExceptionDomainMismatchShort=Forkert websted
+addExceptionDomainMismatchLong=Certifikatet tilhører et andet websted, hvilket kan indikere identitetstyveri.
 addExceptionExpiredShort=Forældet information
 addExceptionExpiredLong=Certifikatet er ikke gyldigt i øjeblikket. Det er ikke muligt at finde ud af, om identiteten er stjålet eller gået tabt.
 addExceptionUnverifiedOrBadSignatureShort=Ukendt identitet
